--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:layout_width="155dp"
         android:layout_height="105dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/roboto_bold"
         android:text="Create Account"
@@ -52,7 +52,6 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/transpwhite"
         android:ems="10"
         android:hint="Confirm Password"
@@ -62,12 +61,10 @@
         android:textColorHighlight="@android:color/background_light"
         android:textColorHint="@color/transpwhite"
         android:textColorLink="#f0f0f0"
-        app:layout_constraintBottom_toTopOf="@+id/reg_imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reg_password"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/reg_password" />
 
     <EditText
         android:id="@+id/reg_email"
@@ -138,6 +135,8 @@
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reg_password2"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/arrow_right" />
 
     <ProgressBar
@@ -146,9 +145,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         android:indeterminate="true"
         android:theme="@style/progressBarBlue"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
