--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -40,7 +40,6 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
-                    android:text="$button"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.502"
                     app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +52,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
-                    android:text="$button"
+                    android:layout_marginBottom="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +104,6 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/roboto"
                     android:maxLines="2"
-                    android:text="$description"
                     android:textAlignment="center"
                     android:textColor="@color/common_google_signin_btn_text_light_pressed"
                     android:textSize="18sp"
@@ -120,7 +118,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/roboto"
-                    android:text="$city"
                     android:textAlignment="center"
                     android:textColor="@color/common_google_signin_btn_text_light_pressed"
                     android:textSize="18sp"
@@ -134,7 +131,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/roboto_bold"
-                    android:text="$username"
                     android:textAlignment="center"
                     android:textColor="@color/common_google_signin_btn_text_light_pressed"
                     android:textSize="18sp"
