--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="155dp"
+        android:layout_width="wrap_content"
         android:layout_height="105dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
